Rewrite csproj to use wilcards for VS2017 and VS2015 projects so that diff are easier.

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <VsCommonIdeDirectory>$(VS140COMNTOOLS)..\IDE\</VsCommonIdeDirectory>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -221,100 +222,42 @@
   </ItemGroup>
   <ItemGroup Label="NonGac">
     <Reference Include="Microsoft.TeamFoundation.Client">
-      <HintPath>$(VS140COMNTOOLS)..\IDE\CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Client.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.TeamFoundation.Controls">
-      <HintPath>$(VS140COMNTOOLS)..\IDE\CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Controls.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Controls.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.TeamFoundation.Common">
-      <HintPath>$(VS140COMNTOOLS)..\IDE\CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Common.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)CommonExtensions\Microsoft\TeamFoundation\Team Explorer\Microsoft.TeamFoundation.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.ComponentModelHost">
-      <HintPath>$(VS140COMNTOOLS)\..\IDE\PublicAssemblies\Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)PublicAssemblies\Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.CodeAnalysis">
-      <HintPath>$(VS140COMNTOOLS)\..\..\Team Tools\Static Analysis Tools\FxCop\Microsoft.VisualStudio.CodeAnalysis.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)..\..\Team Tools\Static Analysis Tools\FxCop\Microsoft.VisualStudio.CodeAnalysis.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binding\BindingControllerTests.cs" />
-    <Compile Include="Binding\BindingWorkflowTests.cs" />
-    <Compile Include="Binding\NuGetHelperTests.cs" />
-    <Compile Include="Binding\ProjectBindingOperationTests.cs" />
-    <Compile Include="Binding\SolutionBindingOperationTests.cs" />
-    <Compile Include="Connection\BasicCredentialsValidatorTests.cs" />
-    <Compile Include="Connection\ConnectControllerTests.cs" />
-    <Compile Include="Connection\ConnectionInformationDialogTests.cs" />
-    <Compile Include="Framework\ConfigurableCredentialStore.cs" />
-    <Compile Include="Helpers\RetryHelperTests.cs" />
-    <Compile Include="IServiceProviderExtensionsTests.cs" />
-    <Compile Include="LanguageConverterTests.cs" />
-    <Compile Include="LocalServices\ErrorListInfoBarController.QualityProfileBackgroundProcessorTests.cs" />
-    <Compile Include="LocalServices\ErrorListInfoBarControllerTests.cs" />
-    <Compile Include="LocalServices\ProjectSystemHelperExtensionsTests.cs" />
-    <Compile Include="LocalServices\RuleSetSerializerTests.cs" />
-    <Compile Include="LocalServices\SolutionBindingInformationProviderTests.cs" />
-    <Compile Include="Persistence\BoundSonarQubeProjectExtensionsTests.cs" />
-    <Compile Include="Persistence\SolutionBindingSerializerTests.cs" />
-    <Compile Include="ProfileConflicts\ConflictsManagerTests.cs" />
-    <Compile Include="ProfileConflicts\FixedRuleSetInfoTests.cs" />
-    <Compile Include="ProfileConflicts\RuleConflictInfoTests.cs" />
-    <Compile Include="ProfileConflicts\ProjectRuleSetConflictTests.cs" />
-    <Compile Include="ProfileConflicts\RuleSetConflictsControllerTests.cs" />
-    <Compile Include="ProfileConflicts\RuleSetInformationTests.cs" />
-    <Compile Include="ProfileConflicts\RuleSetInspectorTests.cs" />
-    <Compile Include="LanguageTests.cs" />
-    <Compile Include="LocalServices\SolutionRuleSetsInformationProviderTests.cs" />
-    <Compile Include="LocalServices\SourceControlledFileSystemTests.cs" />
-    <Compile Include="Helpers\PathHelperTests.cs" />
-    <Compile Include="Persistence\BoundSonarQubeProjectTests.cs" />
-    <Compile Include="Progress\ProgressNotificationListenerTests.cs" />
-    <Compile Include="Progress\ProgressStepRunnerTests.cs" />
-    <Compile Include="LocalServices\ProjectSystemFilterTests.cs" />
-    <Compile Include="MefServices\ProjectPropertyManagerTests.cs" />
-    <Compile Include="Helpers\RuleSetHelperTests.cs" />
-    <Compile Include="SanityTests.cs" />
-    <Compile Include="Connection\ConnectionWorkflowTests.cs" />
-    <Compile Include="Service\AuthenticationHeaderProviderTests.cs" />
-    <Compile Include="Service\ConnectionInformationTests.cs" />
-    <Compile Include="Binding\ProjectBindingOperation.WriterTests.cs" />
-    <Compile Include="MefServices\ActiveSolutionTrackerTests.cs" />
-    <Compile Include="Service\VersionHelperTests.cs" />
-    <Compile Include="MefServices\ActiveSolutionBoundTrackerTests.cs" />
-    <Compile Include="State\StateManagerTests.cs" />
-    <Compile Include="State\TransferableVisualStateTests.cs" />
-    <Compile Include="TeamExplorer\ConnectSectionViewModelTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\*.xaml.cs;**\*.Designer.cs" />
     <Compile Include="..\AssemblyInfo.Shared.cs">
       <Link>Properties\AssemblyInfo.Shared.cs</Link>
     </Compile>
-    <Compile Include="Service\SonarQubeServiceWrapperTests.cs" />
-    <Compile Include="TeamExplorer\ProjectViewModelTests.cs" />
-    <Compile Include="TeamExplorer\SectionControllerTests.cs" />
-    <Compile Include="TeamExplorer\ServerViewModelTests.cs" />
-    <Compile Include="LocalServices\ProjectSystemHelperTests.cs" />
-    <Compile Include="TeamExplorer\SonarQubeNavigationItemTests.cs" />
-    <Compile Include="TeamExplorer\SonarQubePageTests.cs" />
-    <Compile Include="TeamExplorer\TeamExplorerControllerTests.cs" />
-    <Compile Include="TelemetryLoggerAccessorTests.cs" />
-    <Compile Include="Telemetry\TelemetryClientTests.cs" />
-    <Compile Include="Telemetry\TelemetryDataRepositoryTests.cs" />
-    <Compile Include="Telemetry\TelemetryManagerTests.cs" />
-    <Compile Include="Helpers\UriExtensionsTests.cs" />
-    <Compile Include="MefServices\VsSessionHostTests.cs" />
-    <Compile Include="Helpers\VsShellUtilsTests.cs" />
-    <Compile Include="WPF\BoolToVisibilityConverterTests.cs" />
-    <Compile Include="Connection\UriValidatorTests.cs" />
-    <Compile Include="Connection\ConnectDialogViewModelTests.cs" />
-    <Compile Include="WPF\ContextualCommandsCollectionTests.cs" />
-    <Compile Include="WPF\ContextualCommandViewModelTests.cs" />
-    <Compile Include="WPF\ProjectViewModelVisibilityConverterTests.cs" />
-    <Compile Include="WPF\RelayCommandTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Integration.UnitTests.ruleset" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <AdditionalFiles Include="..\SonarLint.xml">
+      <Link>Properties\SonarLint.xml</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Progress\Progress.csproj">
@@ -333,17 +276,6 @@
       <Project>{fbd8024a-9795-4e5b-938e-afe44fca240c}</Project>
       <Name>TestInfrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Integration.UnitTests.ruleset" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <AdditionalFiles Include="..\SonarLint.xml">
-      <Link>Properties\SonarLint.xml</Link>
-    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
