--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MinimumVisualStudioVersion Condition=" $(VisualStudioVersion) == '14.0' ">14.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -23,6 +23,7 @@
     <IncludeDebugSymbolsInLocalVSIXDeployment>false</IncludeDebugSymbolsInLocalVSIXDeployment>
     <CopyBuildOutputToOutputDirectory>true</CopyBuildOutputToOutputDirectory>
     <CopyOutputSymbolsToOutputDirectory>false</CopyOutputSymbolsToOutputDirectory>
+    <VsCommonIdeDirectory>$(VS140COMNTOOLS)..\IDE\</VsCommonIdeDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,32 +46,23 @@
     <CodeAnalysisRuleSet>Integration.Vsix.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\ProjectSonarLintMenuCommand.cs" />
-    <Compile Include="Helpers\CommonGuids.cs" />
-    <Compile Include="Helpers\IEnumerableExtensions.cs" />
-    <Compile Include="Helpers\TcpUtil.cs" />
-    <Compile Include="Helpers\VisualStudioConstants.cs" />
-    <Compile Include="Commands\PackageCommandId.cs" />
-    <Compile Include="Commands\ProjectExcludePropertyToggleCommand.cs" />
-    <Compile Include="Commands\ProjectTestPropertySetCommand.cs" />
-    <Compile Include="Commands\VsCommandBase.cs" />
-    <Compile Include="Commands\ManageConnectionsCommand.cs" />
-    <Compile Include="Commands\PackageCommandManager.cs" />
-    <Compile Include="InfoBar\InfoBarManager.cs" />
-    <Compile Include="SonarLintDaemonPackage.cs" />
-    <Compile Include="SonarLintIntegrationPackage.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\*.Designer.cs;Settings\*;**\Protobuf\*;**\Telemetry\GeneratedCode\*;**\SonarLintDaemon\SonarLintDaemonInstaller.*;**\SonarLintDaemon\SonarLintDaemonSplashscreen.*" />
     <Compile Include="Protobuf\Sonarlint-daemonGrpc.cs" />
     <Compile Include="Protobuf\SonarlintDaemon.cs" />
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
+    <Compile Include="**\*.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Page Include="**\*.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Compile Include="Resources\Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Settings\GeneralOptionsDialogControl.xaml.cs">
-      <DependentUpon>GeneralOptionsDialogControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Settings\OtherOptionsDialogControl.xaml.cs">
-      <DependentUpon>OtherOptionsDialogControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings\OtherOptionsDialogPage.cs">
       <SubType>Component</SubType>
@@ -79,27 +71,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Settings\SonarLintSettings.cs" />
-    <Compile Include="SolutionAnalysisRequester\RoslynRuntimeOptions.cs" />
-    <Compile Include="SolutionAnalysisRequester\ISolutionAnalysisRequester.cs" />
-    <Compile Include="SolutionAnalysisRequester\IWorkspaceConfigurator.cs" />
-    <Compile Include="SolutionAnalysisRequester\WorkspaceConfigurator.cs" />
-    <Compile Include="SonarAnalyzerManager.cs" />
-    <Compile Include="SolutionAnalysisRequester\SolutionAnalysisRequester.cs" />
-    <Compile Include="SonarLintDaemon\SonarLintDaemonInstaller.xaml.cs">
-      <DependentUpon>SonarLintDaemonInstaller.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SonarLintDaemon\ISonarLintDaemon.cs" />
-    <Compile Include="SonarLintDaemon\SonarLintDaemon.cs" />
-    <Compile Include="SonarLintDaemon\SonarLintDaemonSplashscreen.xaml.cs">
-      <DependentUpon>SonarLintDaemonSplashscreen.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SonarLintTracker\IssueMarker.cs" />
-    <Compile Include="SonarLintTracker\IssuesSnapshot.cs" />
-    <Compile Include="SonarLintTracker\IssueTracker.cs" />
-    <Compile Include="SonarLintTracker\SinkManager.cs" />
-    <Compile Include="SonarLintTracker\SnapshotFactory.cs" />
-    <Compile Include="SonarLintTracker\TaggerProvider.cs" />
-    <Compile Include="SonarLintTelemetryPackage.cs" />
     <Compile Include="Telemetry\GeneratedCode\SqmCommandFacade.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -110,14 +81,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SqmOleCommandTarget.tt</DependentUpon>
     </Compile>
-    <Compile Include="InternalsVisibleTo.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\AssemblyInfo.Shared.cs">
-      <Link>Properties\AssemblyInfo.Shared.cs</Link>
-    </Compile>
-    <Compile Include="BoundSolutionAnalyzer.cs" />
-    <Compile Include="Telemetry\SonarLintIntegrationPackage.IOleCommandTarget.cs" />
-    <Compile Include="Telemetry\TelemetryLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -442,7 +405,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.ComponentModelHost">
-      <HintPath>$(VS140COMNTOOLS)\..\IDE\PublicAssemblies\Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
+      <HintPath>$(VsCommonIdeDirectory)PublicAssemblies\Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -509,24 +472,6 @@
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.5.10.0.1302\analyzers\SonarAnalyzer.CSharp.dll" />
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.5.10.0.1302\analyzers\SonarAnalyzer.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Page Include="Settings\GeneralOptionsDialogControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Settings\OtherOptionsDialogControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SonarLintDaemon\SonarLintDaemonInstaller.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SonarLintDaemon\SonarLintDaemonSplashscreen.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
@@ -552,8 +497,10 @@
   </Target>
   <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools.14.3.25407\build\Microsoft.VSSDK.BuildTools.targets" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools.14.3.25407\build\Microsoft.VSSDK.BuildTools.targets')" />
   <PropertyGroup>
-    <PreBuildEvent>cd $(ProjectDir)Protobuf
-build.bat</PreBuildEvent>
+    <PreBuildEvent>
+      cd $(ProjectDir)Protobuf
+      build.bat
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
