--- a/src/Progress.UnitTests/Progress.UnitTests.csproj
+++ b/src/Progress.UnitTests/Progress.UnitTests.csproj
@@ -141,25 +141,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ProgessController\DefaultProgressStepFactoryTests.cs" />
-    <Compile Include="ProgessController\DeterminateStepProgressNotifierTests.cs" />
-    <Compile Include="ProgessController\ErrorNotificationManagerTests.cs" />
-    <Compile Include="ProgessController\HelpersTests.cs" />
-    <Compile Include="ProgessController\MessageVerificationHelper.cs" />
-    <Compile Include="ProgessController\ProgressControllerStepTests.cs" />
-    <Compile Include="ProgessController\SequentialProgressControllerTests.cs" />
-    <Compile Include="ProgessController\VsActivityLogNotifierTests.cs" />
-    <Compile Include="ProgessController\VsOutputWindowPaneNotifierTests.cs" />
-    <Compile Include="ProgessController\VsMessageBoxNotifierTests.cs" />
-    <Compile Include="ProgressObserver\ProgressControllerViewModelTests.cs" />
-    <Compile Include="ProgressObserver\ProgressObserverTests.cs" />
-    <Compile Include="ProgressObserver\ProgressStepViewModelTests.cs" />
-    <Compile Include="ProgressObserver\ProgressViewModelTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\AssemblyInfo.Shared.cs" />
-    <Compile Include="Services\StubVsActivityLog.cs" />
-    <Compile Include="Services\StubVsOutputWindowPane.cs" />
-    <Compile Include="Services\StubVsUIShell.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*" />
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+    <None Include="Progress.UnitTests.ruleset" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Include="..\SonarLint.xml">
+      <Link>Properties\SonarLint.xml</Link>
+    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Progress.TestFramework\Progress.TestFramework.csproj">
@@ -174,15 +168,6 @@
       <Project>{b00c57eb-f4ec-43ce-a849-90da04775b84}</Project>
       <Name>ProgressVS</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Progress.UnitTests.ruleset" />
-  </ItemGroup>
-  <ItemGroup>
-    <AdditionalFiles Include="..\SonarLint.xml">
-      <Link>Properties\SonarLint.xml</Link>
-    </AdditionalFiles>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
