--- a/src/Progress/Progress.csproj
+++ b/src/Progress/Progress.csproj
@@ -47,7 +47,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArgumentValidation.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\*.xaml.cs;**\*.Designer.cs" />
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
+    <Compile Include="**\*.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Page Include="**\*.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Compile Include="CommonResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -58,48 +68,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ControllerResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ProgressController\Helpers.cs" />
-    <Compile Include="InternalsVisibleTo.cs" />
-    <Compile Include="MVVM\RelayCommand.cs" />
-    <Compile Include="ProgressController\CancellationSupportChangedEventArgs.cs" />
-    <Compile Include="ProgressController\ErrorNotification\ErrorNotificationMananger.cs" />
-    <Compile Include="ProgressController\ErrorNotification\IErrorNotificationManager.cs" />
-    <Compile Include="ProgressController\ErrorNotification\IProgressErrorNotifier.cs" />
-    <Compile Include="ProgressController\IProgressController.cs" />
-    <Compile Include="ProgressController\IProgressEvents.cs" />
-    <Compile Include="ProgressController\IProgressStep.cs" />
-    <Compile Include="ProgressController\IProgressStepDefinition.cs" />
-    <Compile Include="ProgressController\IProgressStepExecutionEvents.cs" />
-    <Compile Include="ProgressController\IProgressStepFactory.cs" />
-    <Compile Include="ProgressController\IProgressStepOperation.cs" />
-    <Compile Include="ProgressController\ProgressControllerFinishedEventArgs.cs" />
-    <Compile Include="ProgressController\ProgressControllerHelper.cs" />
-    <Compile Include="ProgressController\ProgressControllerResult.cs" />
-    <Compile Include="ProgressController\ProgressEventArgs.cs" />
-    <Compile Include="ProgressController\ProgressStepDefinition.cs" />
-    <Compile Include="ProgressController\StepAttributes.cs" />
-    <Compile Include="ProgressController\StepExecution.cs" />
-    <Compile Include="ProgressController\StepExecutionChangedEventArgs.cs" />
-    <Compile Include="ProgressController\StepExecutionState.cs" />
-    <Compile Include="ProgressController\DeterminateStepProgressNotifier.cs" />
-    <Compile Include="ProgressObservation\IProgressVisualizer.cs" />
     <Compile Include="ProgressObservation\ProgressObserverCoreResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ProgressObserverCoreResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ProgressObservation\ViewModels\ProgressControllerViewModel.cs" />
-    <Compile Include="ProgressObservation\ViewModels\ProgressStepViewModel.cs" />
-    <Compile Include="ProgressObservation\ViewModels\ProgressViewModel.cs" />
-    <Compile Include="ProgressObservation\View\ProgressVisualizerControl.xaml.cs">
-      <DependentUpon>ProgressVisualizerControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\AssemblyInfo.Shared.cs">
-      <Link>Properties\AssemblyInfo.Shared.cs</Link>
-    </Compile>
-    <Compile Include="ValidatedNotNullAttribute.cs" />
-    <Compile Include="MVVM\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="CommonResources.resx">
@@ -117,20 +90,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ProgressObserverCoreResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="ProgressObservation\View\DataTemplates.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="ProgressObservation\View\ProgressVisualizerControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="ProgressObservation\View\Styles.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
