--- a/src/ProgressVS/ProgressVS.csproj
+++ b/src/ProgressVS/ProgressVS.csproj
@@ -117,44 +117,27 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InternalsVisibleTo.cs" />
-    <Compile Include="ProgressController\DefaultProgressStepFactory.cs" />
-    <Compile Include="ProgressController\ErrorNotification\VsActivityLogNotifier.cs" />
-    <Compile Include="ProgressController\ErrorNotification\VsOutputWindowPaneNotifier.cs" />
-    <Compile Include="ProgressController\ErrorNotification\VsMessageBoxNotifier.cs" />
-    <Compile Include="ProgressController\ProgressControllerStep.cs" />
-    <Compile Include="ProgressController\ProgressControllerStep.IProgressStep.cs" />
-    <Compile Include="ProgressController\ProgressControllerStep.IProgressStepExecutionEvents.cs" />
-    <Compile Include="ProgressController\ProgressControllerStep.IProgressStepOperation.cs" />
+    <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\*.xaml.cs;**\*.Designer.cs" />
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
+    <Compile Include="**\*.xaml.cs">
+      <DependentUpon>%(Filename)</DependentUpon>
+    </Compile>
+    <Page Include="**\*.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Compile Include="ProgressController\ProgressResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ProgressResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ProgressController\SequentialProgressController.cs" />
-    <Compile Include="ProgressController\SequentialProgressController.IProgressController.cs" />
-    <Compile Include="ProgressController\SequentialProgressController.IProgressEvents.cs" />
-    <Compile Include="ProgressObservation\ProgressObserver.cs" />
     <Compile Include="ProgressObservation\ProgressObserverResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ProgressObserverResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ProgressObservation\View\WpfWindowProgressVisualizer.xaml.cs">
-      <DependentUpon>WpfWindowProgressVisualizer.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\AssemblyInfo.Shared.cs">
-      <Link>Properties\AssemblyInfo.Shared.cs</Link>
-    </Compile>
-    <Compile Include="VsTaskSchedulerServiceExtensions.cs" />
-    <Compile Include="VsThreadingHelper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Progress\Progress.csproj">
-      <Project>{140a6fe4-c8f7-4af7-b4c8-eeeae4e0b1a4}</Project>
-      <Name>Progress</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProgressController\ProgressResources.resx">
@@ -170,18 +153,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ProgressObservation\View\DataTemplates.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="ProgressObservation\View\Styles.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="ProgressObservation\View\WpfWindowProgressVisualizer.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <None Include="packages.config" />
+    <None Include="ProgressVS.ruleset" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\SonarLint.xml">
@@ -190,8 +163,10 @@
     <Content Include="ProgressObservation\View\Images\CheckMark.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="ProgressVS.ruleset" />
+    <ProjectReference Include="..\Progress\Progress.csproj">
+      <Project>{140a6fe4-c8f7-4af7-b4c8-eeeae4e0b1a4}</Project>
+      <Name>Progress</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\packages\SonarAnalyzer.CSharp.5.10.0.1302\analyzers\Google.Protobuf.dll" />
